--- a/src/html/blocks/slider.pug
+++ b/src/html/blocks/slider.pug
@@ -1,3 +1,41 @@
-.slider
-    .container
-        .slider
+.partners
+    .sections-header.container
+        h2.sections-header__title Ремонт техники различных брендов
+    .swiper.slider.container
+        .slider-wrapper.swiper-wrapper
+            .slider-slide
+                img(src="@img/image/lenovo.png", alt="").slider-slide__image
+                a(href="/").slider-slide__link
+            .slider-slide
+                img(src="@img/image/samsung.png", alt="").slider-slide__image
+                a(href="/").slider-slide__link
+            .slider-slide
+                img(src="@img/image/apple.png", alt="").slider-slide__image
+                a(href="/").slider-slide__link
+            .slider-slide
+                img(src="@img/image/view.png", alt="").slider-slide__image
+                a(href="/").slider-slide__link
+            .slider-slide
+                img(src="@img/image/bosh.png", alt="").slider-slide__image
+                a(href="/").slider-slide__link
+            .slider-slide
+                img(src="@img/image/hp.png", alt="").slider-slide__image
+                a(href="/").slider-slide__link
+            .slider-slide
+                img(src="@img/image/acer.png", alt="").slider-slide__image
+                a(href="/").slider-slide__link
+            .slider-slide
+                img(src="@img/image/sony.png", alt="").slider-slide__image
+                a(href="/").slider-slide__link
+            .slider-slide
+                img(src="@img/image/lenovo.png", alt="").slider-slide__image
+                a(href="/").slider-slide__link
+            .slider-slide
+                img(src="@img/image/samsung.png", alt="").slider-slide__image
+                a(href="/").slider-slide__link
+            .slider-slide
+                img(src="@img/image/apple.png", alt="").slider-slide__image
+                a(href="/").slider-slide__link
+        .slider-pagination
+        .slider-actions
+            button(type="button" active).icon--arrows Показать все
